tests/negative/non_exhaustive_bool.glyph
module neg

fn pick(ready: bool) -> number {
  return match ready {
    true => 1,
  }
}
